--- a/src/Game.css
+++ b/src/Game.css
@@ -1,6 +1,13 @@
-.sheet {
+.sheetInput {
     position: absolute;
     top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.sheetOutput {
+    position: absolute;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
