--- a/src/sheet/Sheet.css
+++ b/src/sheet/Sheet.css
@@ -30,6 +30,7 @@
     position: relative;
     top: -82px;
     left: auto;
+    pointer-events: none;
 }
 .upperNote {
     width: 37px;
@@ -38,5 +39,6 @@
     position: relative;
     top: -7px;
     left: auto;
+    pointer-events: none;
 
 }
